--- a/source-css/batquisition.css
+++ b/source-css/batquisition.css
@@ -55,5 +55,32 @@ a[href|="/derpybat"] {width:180px; height:142px; background-position: -0px -635p
 a[href|="/echomoogle"] {width:126px; height:172px; background-position: -180px -635px}
 a[href|="/echoonthebed"] {width:190px; height:155px; background-position: -310px -645px}
 
+
+a[href|="/batdance1"] { display: block; clear: none; float: left; background-image: url(%%amber-dance-by-vectorvito-d72ipke%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance2"] { display: block; clear: none; float: left; background-image: url(%%arid-star-dance-by-vectorvito-d72ipiz%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance3"] { display: block; clear: none; float: left; background-image: url(%%camomile-dance-by-vectorvito-d71fqmy%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance4"] { display: block; clear: none; float: left; background-image: url(%%dusk-dancer-dance-by-vectorvito-d70vntk%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance5"] { display: block; clear: none; float: left; background-image: url(%%carnelian-dance-by-vectorvito-d71za07%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance6"] { display: block; clear: none; float: left; background-image: url(%%echo-dance-by-vectorvito-d7136jh%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance7"] { display: block; clear: none; float: left; background-image: url(%%florence-dance-by-vectorvito-d71fqh4%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance8"] { display: block; clear: none; float: left; background-image: url(%%gloomie-dance-by-vectorvito-d72ipj3%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance9"] { display: block; clear: none; float: left; background-image: url(%%grey-mouse-dance-by-vectorvito-d7136j2%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance10"] { display: block; clear: none; float: left; background-image: url(%%heartbeat-dance-by-vectorvito-d714hz4%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance11"] { display: block; clear: none; float: left; background-image: url(%%ivy-dance-by-vectorvito-d70qge2%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance12"] { display: block; clear: none; float: left; background-image: url(%%jasmine-dance-by-vectorvito-d71fqcl%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance13"] { display: block; clear: none; float: left; background-image: url(%%lullaby-dance-by-vectorvito-d71zab5%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance14"] { display: block; clear: none; float: left; background-image: url(%%midnight-blossom-dance-by-vectorvito-d71ojyu%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance15"] { display: block; clear: none; float: left; background-image: url(%%mirage-dance-by-vectorvito-d714i0m%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance16"] { display: block; clear: none; float: left; background-image: url(%%moonlight-dance-by-vectorvito-d71ojx2%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance17"] { display: block; clear: none; float: left; background-image: url(%%moonshine-dance-by-vectorvito-d71z9bm%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance18"] { display: block; clear: none; float: left; background-image: url(%%mosina-dance-by-vectorvito-d7136j8%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance19"] { display: block; clear: none; float: left; background-image: url(%%night-watch-dance-by-vectorvito-d714i0v%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance20"] { display: block; clear: none; float: left; background-image: url(%%nightlight-dance-by-vectorvito-d70qfpo%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance21"] { display: block; clear: none; float: left; background-image: url(%%pom-pom-dance-by-vectorvito-d72406h%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance22"] { display: block; clear: none; float: left; background-image: url(%%pretty-please--by-vectorvito-d6zslqo%%); width: 101px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance23"] { display: block; clear: none; float: left; background-image: url(%%pull-tab-dance-by-vectorvito-d71ojy3%%); width: 150px; height: 150px; background-position: -0px -0px }
+a[href|="/batdance24"] { display: block; clear: none; float: left; background-image: url(%%soma-dance-by-vectorvito-d71z9sn%%); width: 150px; height: 150px; background-position: -0px -0px }
+
+
 /********* End of Emotes **********/
 
