--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -130,7 +130,7 @@ a[href|="/filly"]
 
 .author[href$="/Moon-Phase"]:after {content: ' of all things lasers ';}
 
-.author[href$="/PresidentCelestia"]:after {content: ' Of Boxxy ';}
+.author[href$="/PresidentCelestia"]:after {content: ' Of Flynt Coal ';}
 
 .author:before {content: 'Queen ';}
 
