--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -627,6 +627,37 @@ a[href|="/ppgoon"] {
     height: 129px;
     background-image: url(%%pinkiefacesmall%%) 
     }
+a[href|="/queenc"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 138px;
+    background-image: url(%%queenc%%) 
+    }
+a[href|="/creepie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 99px;
+    background-image: url(%%creepie%%) 
+    }
+a[href|="/thepinkonehasmasteredtheartoftheflirtyeyeroll"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:150px; height:139px; background-position: -0px -0px; 
+    background-image: url(%%spritesheet2%%) !important
+    }
+a[href|="/ppscream"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:115px; height:139px; background-position: -0px -150px; 
+    background-image: url(%%spritesheet2%%) !important
+    }
+
 
 
 /*Side Bar*/
