--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -408,7 +408,7 @@ height: 800px;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"], a[href|="/rdbwaha"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -416,7 +416,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -481,7 +481,7 @@ a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitf
 {background-image:url(%%misfitsg%%);display:block;float:left;}
 
 /* Misfits h */
-a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"]
+a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"], a[href|="/dashcon"]
 {background-image:url(%%misfitsh%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -610,11 +610,11 @@ a[href|="/shibeshy"], a[href|="/twiworry"], a[href|="/suggestia"]
 {background-position: -0% -1000%;}
 
 /* Grid pos 1,10 'motes */
-a[href|="/appleshibe"], a[href|="/apathiareally"]
+a[href|="/appleshibe"], a[href|="/apathiareally"], a[href|="/rdcringe"]
 {background-position: -100% -1000%;}
 
 /* Grid pos 2,10 'motes */
-a[href|="/shibedash"], a[href|="/karmasmile"]
+a[href|="/shibedash"], a[href|="/karmasmile"], a[href|="/rdcantwait"]
 {background-position: -200% -1000%;}
 
 /* Grid pos 0,11 'motes */
@@ -645,9 +645,13 @@ a[href|="/discentiaelated"]
 a[href|="/cadshrug"]
 {background-position: 0 -1300%;}
 
-/* Grid pso 1,13 'motes */
+/* Grid pos 1,13 'motes */
 a[href|="/fillysurprise"]
 {background-position: -100% -1300%;}
+
+/* Grid pos 2,13 'motes */
+a[href|="/rdbwaha"]
+{background-position: -200% -1300%;}
 
 /* Text Emotes */
 a[href|="/gravestone"] em, a[href|="/theydied"] em
@@ -923,3 +927,4 @@ a[href|="/applelaugh"] {width:100px;height:150px;background-position: -342px 0;}
 a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"] {width:113px;height:150px;background-position: -442px 0;}
 a[href|="/notenoughrarity"], a[href|="/notenoughgems"] {width:193px;height:150px;background-position: 0 -150px;}
 a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"] {width:187px;height:150px;background-position: -193px -150px;}
+a[href|="/dashcon"] {width:250px;height:142px;background-position: 0 -300px;}
