--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -1,5 +1,6 @@
-
-/*** Emotes ***/
+                                
+      
+                               /*** ~~~~~ Emotes ~~~~~ ***/
 
 /* 100 by 100 */
 a[href="/ajcheersghost"], a[href="/ajghost"], a[href="/ajsoawesomeghost"], a[href="/applejackfillyghost"], a[href="/bonghost"], a[href="/dashieposeghost"], a[href="/flutterghost"], a[href="/lyraghost"], a[href="/pinkiefillyghost"], a[href="/pinkieghost"], a[href="/ppsoawesomeghost"], a[href="/raracheeksghost"], a[href="/rarghost"], a[href="/rarisoawesomeghost"], a[href="/rdsoawesomeghost"], a[href="/roseghost"], a[href="/shysoawesomeghost"], a[href="/sweetieghost"], a[href="/twigringhost"], a[href="/twilightfillyghost"], a[href="/twishockedghost"], a[href="/twisoawesomeghost"], a[href="/vinylghost"]{
@@ -250,6 +251,22 @@ a[href="/shybopghost"] {
      background-image: url(%%shybopghost%%) !important
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+             /*        =|=|=|=|=#=#=#=#=#=#=#=#=#====COLOR SCHEME====#=#=#=#=#=#=#=#=|=|=|=|=|=       */
+
+
+
 /*      
 
 Current color scheme references:
@@ -264,7 +281,7 @@ Current color scheme references:
 
 #D4E4F0 - for highlighting (Replaces #D1EDD1)
 
-#CCEBCC - for medium version of main color (Replaces AOSX2PS #D1ACEB)
+#D4E4F0 - for medium version of main color (Replaces AOSX2PS #D1ACEB)
 
 white or #FFFFFF - for all white stuff
 
@@ -272,10 +289,63 @@ black or #000000 - for all black stuff, including post titles
 
 */
 
+                                /* |||||||||||||------DAY MODE------||||||||||||| */
+
+
+    /* Primary Theme Color (dark) */
+
+
+.flairselector h2, .tabmenu li a, #header-bottom-right, #userbarToggle, .NERPageMarker,  .roundfield, #sr-header-area, #RESShortcutsEditContainer, #RESShortcutsSort, #RESShortcutsRight, #RESShortcutsLeft, #RESShortcutsAdd, #RESShortcutsTrash, .fancy-toggle-button .add:active, .RESshortcut.RESshortcutside:active, .RESDashboardToggle:active
+{ background-color: #87A5B7 !important;}
+
+.morelink, .morelink:hover, .sidebox.submit.submit-text .morelink:hover, .fancy-toggle-button .add, .RESshortcut.RESshortcutside, .RESDashboardToggle, .fancy-toggle-button .add:hover, #subButtons-mylittlepony .RESshortcut.RESshortcutside:hover, #subButtons-mylittlepony .RESDashboardToggle:hover
+{ background: #87A5B7 !important;}
+
+.tabmenu li.selected a, h2
+{ color: #87A5B7 !important;}
+
+.linkinfo, .md table, .md thead, .md tbody, .md tr, .md blockquote, .help blockquote
+{ border: solid #87A5B7 !important;}
+
+.linkinfo, .md table, .md thead, .md tbody, .md tr, .md blockquote, .help blockquote
+{ border-color: #87A5B7 !important;}
 
 
 
-/* Flairs */
+    /* Secondary Theme Color (medium) */
+
+
+.linkinfo, .linefield, .infobar, .searchpane, .md table
+{ background-color: #BCCDD7 !important;}
+
+
+   /* Tertiary Theme Color (light) */
+
+
+.morelink:hover, .sidebox.submit.submit-text .morelink:hover, ::selection, .md blockquote, .help blockquote
+{ background-color: #D4E4F0 !important;}
+
+.morelink:hover, .sidebox.submit.submit-text .morelink:hover
+{ border-color: #D4E4F0 !important;}
+
+
+   /* Quaternary Theme Color (very dark) */
+
+
+body >.content >.sharelink ~ .sitetable:before, a.title:link, .sidebox.submit.submit-text .morelink:hover,  .sidebox.submit.submit-link .morelink:hover a, .sidebox.submit.submit-text .morelink:hover a
+{ color: #6C8492 !important;}
+
+#header, #header.res-nightmode, body >.content >.sharelink ~ .sitetable:before, .side form#search input[name="q"]
+{ border-color: #6C8492 !important;}
+
+
+                                /* ############------NIGHT MODE------############ */
+
+
+
+
+
+                                /* -=-=-=-=-=-=-=-=-= Flairs =-=-=-=-=-=-=-=-=- */
 
 .flair-ghost 
 { color:white ; 
@@ -391,7 +461,6 @@ background-color:#C67D33 }
 
 .flairselector h2 {
 color: white !important;
-background-color: #87A5B7 !important;
 }
 
 
@@ -401,7 +470,7 @@ background-color: #87A5B7 !important;
 /* ==================================================Header============================================ */
 
 #header, #header.res-nightmode{
-    border-bottom: 1px solid #6C8492;
+    border-bottom: 1px solid ;
     background: url(%%wt50%%) !important;
 }
 
@@ -448,7 +517,7 @@ margin-top:-16px!important;}
 .tabmenu li.selected a {
 border: 1px solid #4149cd;
 border-bottom: 1px solid white;
-color: #87A5B7 !important;
+background-color: white !important;
 }
 
 .tabmenu li a {
@@ -459,7 +528,6 @@ color: #87A5B7 !important;
 border-top-left-radius: 5px;
 border-top-right-radius: 5px;
 color: #FFFFFF;
-background-color: #87A5B7;
 top: -5px !important;
 left: 30px !important;
 }
@@ -469,10 +537,8 @@ left: 30px !important;
 /* --------------User header (name color, karma color, preferences)------------- */
 
 #header-bottom-right {
-    background-color: #87A5B7
     }
-#userbarToggle {
-background-color: #87A5B7 !important; color: #FFFFFF !important;
+#userbarToggle { color: #FFFFFF !important;
     }
 .user {
     padding-left:5px;
@@ -495,10 +561,9 @@ background-color: #87A5B7 !important; color: #FFFFFF !important;
 body >.content >.sharelink ~ .sitetable:before { 
 content: "The Afterplounge: Where PAD's retired backgrounds rest in peace."; 
 background-color: #FFFFFF;
-border: 1px solid #6C8492;
+border: 1px solid ;
 
 font-size: 14px; 
-color: #6C8492;
 text-align: center;
 display: block;
 padding:5px 10px;
@@ -531,7 +596,6 @@ border-radius: 7px;
 .NERPageMarker {
 border: solid white !important;
 color: white !important;
-background-color: #87A5B7 !important;
 }
 
 /* ----------Change the word for 'readers' and the currently online------------- */
@@ -547,7 +611,7 @@ div.titlebox p.users-online span.word { display: none }
 
 .noncollapsed {background: url('%%wt50%%') left bottom !important;}
 
-.linkinfo { background-color: #BCCDD7 !important; color: black !important; border: solid #87A5B7 !important; }
+.linkinfo {  color: black !important;  }
 
 
 .entry{
@@ -562,14 +626,13 @@ padding-left: 5px;
 }
 
 
-.roundfield {
-background-color: #87A5B7 !important; color: white !important; border: 1px solid black;
+.roundfield { color: white !important; border: 1px solid black;
 }
 
 .linefield .title {color:black !important;}
 
 .linefield { 
-background-color: #BCCDD7 !important; color: black !important; border: solid black;
+ color: black !important; border: solid black;
 }
 
 .md {
@@ -582,29 +645,36 @@ background: url(%%wt50%%) !important;
 
 
 .infobar {
-background-color: #BCCDD7 !important; color: black !important; border: solid black !important;
+ color: black !important; border: solid black !important;
 
 }
 
 
 
 .searchpane {
-background-color: #BCCDD7 !important; color: black !important; border: solid black !important;
+ color: black !important; border: solid black !important;
 
 }
 
 
 .md table {
-     background-color: #BCCDD7 !important; color: black; border: solid #87A5B7 !important; border-color: #87A5B7 !important;
+     background-color: #BCCDD7 !important; color: black; 
+border-left: solid black !important;
+border-right: solid black !important;
+border: solid black !important;
+border-color: black !important;
 }
 .md thead {
-    background-color: #87A5B7 !important; color: white !important; border: solid #87A5B7 !important; border-color: #87A5B7 !important;
+    background-color: #87A5B7 !important; color: white !important; border-left: solid black !important;
+border-right: solid black !important; border: solid black !important; border-color: black !important;
 }
 .md tbody {
-     color: #black !important; border: 2px solid #87A5B7 !important; border-color: #87A5B7 !important;
+     color: #black !important; border-left: 2px solid black !important;
+border-right: 2px solid black !important; border: 2px solid black !important; border-color: black !important;
 }
 .md tr {
-     color: #Black !important; border: 2px solid #87A5B7 !important; border-color: #87A5B7 !important;
+     color: #Black !important; border-left: 2px solid black !important;
+border-right: 2px solid black !important; border: 2px solid black !important; border-color: black !important;
 }
 
 .rounded {
@@ -614,16 +684,22 @@ background: url(%%wt50%%) !important;
 
 
 .md blockquote, .help blockquote {
-border-left: 2px solid #87A5B7;
-border-right: 2px solid #87A5B7;
-border-top: 2px solid #87A5B7;
-border-bottom: 2px solid #87A5B7;
+border-left: 2px solid black !important;
+border-right: 2px solid black !important;
+border-top: 2px solid black !important;
+border-bottom: 2px solid black !important;
+border-radius: 4px;
+display:inline-block; 
+content: "Quote: ";
+padding-left: 7px !important;
+padding-right: 7px !important;
 padding: 4px;
 margin: 5px;
 margin-right: 15px;
 font-style: italic;
 }
 
+.content .md blockquote:before{content:" Quote: " !important;}
 
 .link .score {
 text-shadow: white 0 0 10px !important;
@@ -633,7 +709,6 @@ text-shadow: white 0 0 10px !important;
 .content .md h1:before{content:">" !important}
 
 h2 {
-color: #87A5B7 !important;
 }
 
 h3 {
@@ -645,7 +720,6 @@ font-size: 130% !important;
 /* --------------Change the color of a link post title----------------- */  
 
  a.title:link {
- color: #6C8492 !important;
 }
 a.title:visited {
  color: #000000 !important;
@@ -794,18 +868,16 @@ color: #FFF !important;
 /**** ----------shortcut subreddits---------- ****/
 
 #sr-header-area {
-    background-color: #87A5B7 !important;
     border-bottom: white
     }
 .sr-bar a, .sr-bar .separator {
     color: white !important
     }
 #RESShortcutsEditContainer {
-background-color:#87A5B7 !important;
 }
 
 #RESShortcutsSort, #RESShortcutsRight, #RESShortcutsLeft, #RESShortcutsAdd, #RESShortcutsTrash {
-background-color:#87A5B7 !important; color:white !important;
+ color:white !important;
 }
 
 
@@ -827,7 +899,7 @@ background-color:#87A5B7 !important; color:white !important;
 {
  font-weight:normal;
  letter-spacing:0;
- background:#87A5B7;
+ 
  border: none;
  -moz-border-radius:2px;
  -webkit-border-radius:2px;
@@ -843,19 +915,16 @@ background-color:#87A5B7 !important; color:white !important;
 
 .morelink:hover
 {
- background:#87A5B7;
- background-color:#D4E4F0;
- border-color:#D4E4F0;
+ 
+ 
  background-repeat:no-repeat;
 }
 
 .sidebox.submit.submit-text .morelink:hover
 {
- background:#87A5B7;
- background-color:#D4E4F0;
- border-color:#D4E4F0;
+ 
+ 
  background-repeat:no-repeat;
- color:#6C8492
 }
 
 .morelink 
@@ -876,9 +945,9 @@ background-color:#87A5B7 !important; color:white !important;
  font-size:90% !important;
 }
 
-.sidebox.submit.submit-link .morelink:hover a {color:#6C8492}
+.sidebox.submit.submit-link .morelink:hover a {}
 .sidebox.submit.submit-link .morelink a {font-size:95% !important}
-.sidebox.submit.submit-text .morelink:hover a {color:#6C8492}
+.sidebox.submit.submit-text .morelink:hover a {}
 
 
 .sidebox.submit.submit-link{width: 150px;font-size:95%;}
@@ -897,7 +966,7 @@ background-color:#87A5B7 !important; color:white !important;
 
 .fancy-toggle-button .add, .RESshortcut.RESshortcutside, .RESDashboardToggle
 {
-    background: #87A5B7 !important;
+    
     background-position: -0px -0px;
     background-repeat: repeat;
 }
@@ -911,7 +980,7 @@ background-color:#87A5B7 !important; color:white !important;
  
 .fancy-toggle-button .add:active, .RESshortcut.RESshortcutside:active, .RESDashboardToggle:active
 {
-    background-color: #87A5B7 !important;
+    
     background-position: 0px -24px !important;
     background-repeat: repeat;
 }
@@ -925,7 +994,7 @@ background-color:#87A5B7 !important; color:white !important;
 
 .fancy-toggle-button .add:hover, #subButtons-mylittlepony .RESshortcut.RESshortcutside:hover, #subButtons-mylittlepony .RESDashboardToggle:hover
 {
-   background: #87A5B7;
+   
 }
 
 .fancy-toggle-button .remove:hover, #subButtons-mylittlepony .RESshortcut.RESshortcutside.remove:hover, #subButtons-mylittlepony .RESDashboardToggle.remove:hover
@@ -963,7 +1032,7 @@ background-color: white;
 text-align: center;
 }
 .side form#search input[name="q"] {
-    border: 1px solid #6C8492;
+    border: 1px solid ;
     width: 292px !important;
     color: #000000;
     font-size: 14px;
@@ -974,7 +1043,7 @@ text-align: center;
 /**** ----------------highlighting------------ ****/
 
 ::selection {
-    background-color: #D4E4F0;
+   
     color: #000000
     }
 
