--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -699,10 +699,6 @@ a[href|="/sunsetlaugh"],a[href|="/sslaugh"],a[href|="/rsunsetlaugh"],a[href|="/r
 {display:block;clear:none;float:left;width:112px;height:114px;background-image:url(%%sunsetlaugh%%)!important;
 }
 
-a[href|="/clappingsunset"],a[href|="/clappingss"],a[href|="/rclappingsunset"],a[href|="/rclappingss"] {
-display:block;clear:none;float:left;width:40px;height:46px;background-image:url(%%clappingsunset%%)!important;
-}
-
 a[href|="/sunsetshades"],a[href|="/ssshades"],a[href|="/rsunsetshades"],a[href|="/rssshades"]
 {display:block;clear:none;float:left;width:70px;height:112px;background-image:url(%%sunsetshades%%)!important;
 }
@@ -759,7 +755,6 @@ a[href|="/sunsetnya"],a[href|="/ssnya"],a[href|="/rsunsetnya"],a[href|="/rssnya"
 display:block;clear:none;float:left;width:143px;height:140px;background-image:url(%%theterror%%)!important;
 background-position: -358px 0;
 }
-
 a[href|="/sunsetwalk"],a[href|="/rsunsetwalk"],a[href|="/sswalk"],a[href|="/rsswalk"] {
     display: block;
     clear: none;
@@ -767,7 +762,27 @@ a[href|="/sunsetwalk"],a[href|="/rsunsetwalk"],a[href|="/sswalk"],a[href|="/rssw
     width: 98px;
     height: 176px;
     background-position: -0px -0px;
-    background-image: url(%%sunsetwalk%%) !important;
+    background-image: url(%%sunsetwalk%%)!important;
+}
+
+a[href|="/clappingsunset"],a[href|="/rclappingsunset"],a[href|="/clappingss"],a[href|="/rclappingss"] {
+display: block;
+clear: none;
+background-image: url(%%clappingsunset%%)!important;
+height: 70px;
+width: 70px;
+-webkit-animation: ssclap .3s steps(3,end) infinite;
+animation: ssclap .3s steps(3,end) infinite
+}
+
+@-webkit-keyframes ssclap{
+from{background-position: 0 0}
+to{background-position: -210px 0}
+}
+
+@keyframes ssclap{
+from{background-position: 0 0}
+to{background-position: -210px 0}
 }
 
 a[href|="/rajlie"],a[href|="/ra00"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/rflutterjerk"],a[href|="/ra20"],a[href|="/rflutterroll"],a[href|="/ra30"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/rcelestiamad"],a[href|="/ra11"],a[href|="/rtwicrazy"],a[href|="/ra21"],a[href|="/rspikemeh"],a[href|="/ra31"],a[href|="/rlunateehee"],a[href|="/ra02"],a[href|="/rlunawait"],a[href|="/ra12"],a[href|="/rpaperbagderpy"],a[href|="/rpaperbagwizard"],a[href|="/rderpwizard"],a[href|="/ra22"],a[href|="/rabmeh"],a[href|="/ra32"],a[href|="/rajhappy"],a[href|="/rhapplejack"],a[href|="/ra03"],a[href|="/rppfear"],a[href|="/rpinkiefear"],a[href|="/ra13"],a[href|="/rtwibeam"],a[href|="/ra23"],a[href|="/rscootaderp"],a[href|="/rdidneyworl"],a[href|="/rDIDNEYWORL"],a[href|="/ra33"],a[href|="/rraritydaww"],a[href|="/ra04"],a[href|="/rscootacheer"],a[href|="/rlootascoo"],a[href|="/ra14"],a[href|="/rpinkieawe"],a[href|="/rppawe"],a[href|="/rareyouawizard"],a[href|="/ra34"],a[href|="/rajsup"],a[href|="/rajwhatsgood"],a[href|="/ra05"],a[href|="/rflutterwhoa"],a[href|="/rflutterwoah"],a[href|="/ra15"],a[href|="/rrdcry"],a[href|="/ra25"],a[href|="/rsilverspoon"],a[href|="/rsspout"],a[href|="/ra35"],a[href|="/rohcomeon"],a[href|="/rsbcomeon"],a[href|="/ra06"],a[href|="/rppcute"],a[href|="/rcutiepie"],a[href|="/ra16"],a[href|="/rabbored"],a[href|="/rabmerp"],a[href|="/ra26"],a[href|="/rrarityreally"],a[href|="/ra36"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ra07"],a[href|="/rsbbook"],a[href|="/rsweetiebook"],a[href|="/rsbook"],a[href|="/ra17"],a[href|="/rscootaplease"],a[href|="/rscootappeal"],a[href|="/rscootaplz"],a[href|="/ra27"],a[href|="/rapplegasp"],a[href|="/ra37"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/ra08"],a[href|="/rcelestiawut"],a[href|="/rwutlestia"],a[href|="/ra18"],a[href|="/rgrannysmith"],a[href|="/rgranny"],a[href|="/roldmareyellsatcloud"],a[href|="/ra28"],a[href|="/rrarishock"],a[href|="/ra38"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra09"],a[href|="/rchrysalis"],a[href|="/rqueenchrysalis"],a[href|="/rchangelingqueen"],a[href|="/ra19"],a[href|="/rcadence"],a[href|="/rcadance"],a[href|="/rprincesscadance"],a[href|="/rprincesscadence"],a[href|="/rprincessmiamorecadenza"],a[href|="/ra29"],a[href|="/rapplederp"],a[href|="/ra39"],
@@ -801,7 +816,8 @@ a[href|="/rssterror"],
 a[href|="/rsshorror"],
 a[href|="/rsunsetsoda"],a[href|="/rsssoda"],
 a[href|="/rsunsetnya"],a[href|="/rssnya"],
-a[href|="/rsunsetwalk"],a[href|="/rsswalk"] {
+a[href|="/rsunsetwalk"],a[href|="/rsswalk"],
+a[href|="/rsunsetclap"],a[href|="/rssclap"] {
 -webkit-transform:scaleX(-1);
 -moz-transform:scaleX(-1);
 -ms-transform:scaleX(-1);
