--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -386,3 +386,22 @@
 .bpflag-rrotate, .bpflag-lrrotate {animation:znips 2s infinite linear;image-rendering:-moz-crisp-edges}
 
 .md{overflow-y:hidden !important}
+
+@keyframes intensifies {
+    0% { left: 0px; top: 0px; }
+    10% { left: 1px; top: 0px; }
+    20% { left: 0px; top: 1px; }
+    30% { left: -1px; top: 0px; }
+    40% { left: 0px; top: 1px; }
+    50% { left: 1px; top: 0px; }
+    60% { left: 1px; top: -1px; }
+    70% { left: 1px; top: 1px; }
+    80% { left: 1px; top: -1px; }
+    90% { left: -1px; top: 1px; }
+    100% { left: 0px; top: 0px; }
+}
+
+.bpflag-intensifies {
+    position: relative;
+    animation: intensifies .2s linear 0s infinite alternate !important;
+}
